--- a/index.html
+++ b/index.html
@@ -460,6 +460,61 @@
                         <p class="carousel--team-title text-white">Community Manager</p>
                         <a class="btn" href="https://www.linkedin.com/in/sarfraz-petkar-7b59297b/" target="_blank" rel="noopener" aria-label="linkedin">LinkedIn</a>
                     </div>
+                    <div class="column">
+                        <img class="carousel--team-img" src="assets/team/raquel.jpg" alt="team">
+                        <h3 class="carousel--team-name text-white">Raquel Baptista</h3>
+                        <p class="carousel--team-title text-white">Competition and Business Operations</p>
+                        <a class="btn mb3" href="https://www.linkedin.com/in/raquel-baptista/" target="_blank" rel="noopener" aria-label="linkedin">LinkedIn</a>
+
+                        <img class="carousel--team-img" src="assets/team/dharmendra.jpg" alt="team">
+                        <h3 class="carousel--team-name text-white">Dharmendra Jha</h3>
+                        <p class="carousel--team-title text-white">Full Stack Engineer</p>
+                        <a class="btn" href="https://www.linkedin.com/in/dkjhaj2ee/" target="_blank" rel="noopener" aria-label="linkedin">LinkedIn</a>
+                    </div>
+                    <div class="column">
+                        <img class="carousel--team-img" src="assets/team/saksham.jpg" alt="team">
+                        <h3 class="carousel--team-name text-white">Saksham Kukreja</h3>
+                        <p class="carousel--team-title text-white">Chief Strategic Data Analyst</p>
+                        <a class="btn mb3" href="https://www.linkedin.com/in/sakshamkukreja/" target="_blank" rel="noopener" aria-label="linkedin">LinkedIn</a>
+
+                        <img class="carousel--team-img" src="assets/team/ayoub.jpg" alt="team">
+                        <h3 class="carousel--team-name text-white">Ayoub Kada</h3>
+                        <p class="carousel--team-title text-white">UI/UX Designer</p>
+                        <a class="btn" href="https://www.linkedin.com/in/ayoub-kada-906655a0/" target="_blank" rel="noopener" aria-label="linkedin">LinkedIn</a>
+                    </div>
+                    <div class="column">
+                        <img class="carousel--team-img" src="assets/team/sidharth.jpg" alt="team">
+                        <h3 class="carousel--team-name text-white">Sidharth Sharma</h3>
+                        <p class="carousel--team-title text-white">Community Operations</p>
+                        <a class="btn mb3" href="https://www.linkedin.com/in/sddhrthsharma/" target="_blank" rel="noopener" aria-label="linkedin">LinkedIn</a>
+
+                        <img class="carousel--team-img" src="assets/team/naushad.jpg" alt="team">
+                        <h3 class="carousel--team-name text-white">Naushad Ahmad</h3>
+                        <p class="carousel--team-title text-white">Full Stack Engineer</p>
+                        <a class="btn" href="https://www.linkedin.com/in/naushadahmad2470/" target="_blank" rel="noopener" aria-label="linkedin">LinkedIn</a>
+                    </div>
+                    <div class="column">
+                        <img class="carousel--team-img" src="assets/team/baljender.jpg" alt="team">
+                        <h3 class="carousel--team-name text-white">Baljender Singh</h3>
+                        <p class="carousel--team-title text-white">Community Operations</p>
+                        <a class="btn mb3" href="https://www.linkedin.com/in/baljender-singh-5b5b82102/" target="_blank" rel="noopener" aria-label="linkedin">LinkedIn</a>
+
+                        <img class="carousel--team-img" src="assets/team/mayank.jpg" alt="team">
+                        <h3 class="carousel--team-name text-white">Mayank Gupta</h3>
+                        <p class="carousel--team-title text-white">QA Engineer</p>
+                        <a class="btn" href="https://www.linkedin.com/in/mayankgupta332/" target="_blank" rel="noopener" aria-label="linkedin">LinkedIn</a>
+                    </div>
+                    <div class="column">
+                        <img class="carousel--team-img" src="assets/team/sameep.jpg" alt="team">
+                        <h3 class="carousel--team-name text-white">Sameep Singhania</h3>
+                        <p class="carousel--team-title text-white">Blockchain Engineer</p>
+                        <a class="btn mb3" href="https://www.linkedin.com/in/sameepsi/" target="_blank" rel="noopener" aria-label="linkedin">LinkedIn</a>
+
+                        <img class="carousel--team-img" src="assets/team/joey.jpg" alt="team">
+                        <h3 class="carousel--team-name text-white">Joey Bertschler</h3>
+                        <p class="carousel--team-title text-white">Content Writer</p>
+                        <a class="btn" href="https://www.linkedin.com/in/joey-bertschler/" target="_blank" rel="noopener" aria-label="linkedin">LinkedIn</a>
+                    </div>
                 </div>
                 <svg id="team-previous" class="previous carousel__arrow carousel__arrow--white"><use xlink:href="#icon-arrow-left"/></svg>
                 <svg id="team-next" class="next carousel__arrow carousel__arrow--white"><use xlink:href="#icon-arrow-right"/></svg>
@@ -475,28 +530,52 @@
                 </div>
                 <div class="row carousel carousel--advisors">
                     <div class="column">
-                        <img class="carousel--advisors-img" src="assets/team/tetsuro.jpeg" alt="advisors">
-                        <h3 class="carousel--advisors-name text-white">Tetsuro Masunaga</h3>
-                        <p class="carousel--advisors-title text-white">CEO & Co-Founder</p>
-                        <a class="btn" href="https://www.linkedin.com/in/tetsuro-masunaga-12370b62/" target="_blank" rel="noopener" aria-label="linkedin">LinkedIn</a>
+                        <img class="carousel--advisors-img" src="assets/advisors/andy.jpg" alt="advisors">
+                        <h3 class="carousel--advisors-name text-white">Andy Sugino</h3>
+                        <p class="carousel--advisors-title text-white">Chief Data Scientist</p>
+                        <a class="btn" href="https://www.linkedin.com/in/atsushi-andy-sugino-58415276/" target="_blank" rel="noopener" aria-label="linkedin">LinkedIn</a>
                     </div>
                     <div class="column">
-                        <img class="carousel--advisors-img" src="assets/team/tetsuro.jpeg" alt="advisors">
-                        <h3 class="carousel--advisors-name text-white">Tetsuro Masunaga</h3>
-                        <p class="carousel--advisors-title text-white">CEO & Co-Founder</p>
-                        <a class="btn" href="https://www.linkedin.com/in/tetsuro-masunaga-12370b62/" target="_blank" rel="noopener" aria-label="linkedin">LinkedIn</a>
+                        <img class="carousel--advisors-img" src="assets/advisors/eiad.jpg" alt="advisors">
+                        <h3 class="carousel--advisors-name text-white">Dr. Eiad Yafi</h3>
+                        <p class="carousel--advisors-title text-white">Advisor</p>
+                        <a class="btn" href="https://www.linkedin.com/in/eyafi/" target="_blank" rel="noopener" aria-label="linkedin">LinkedIn</a>
                     </div>
                     <div class="column">
-                        <img class="carousel--advisors-img" src="assets/team/tetsuro.jpeg" alt="advisors">
-                        <h3 class="carousel--advisors-name text-white">Tetsuro Masunaga</h3>
-                        <p class="carousel--advisors-title text-white">CEO & Co-Founder</p>
-                        <a class="btn" href="https://www.linkedin.com/in/tetsuro-masunaga-12370b62/" target="_blank" rel="noopener" aria-label="linkedin">LinkedIn</a>
+                        <img class="carousel--advisors-img" src="assets/advisors/rupinder.jpg" alt="advisors">
+                        <h3 class="carousel--advisors-name text-white">Rupinder Goel</h3>
+                        <p class="carousel--advisors-title text-white">Advisor</p>
+                        <a class="btn" href="https://www.linkedin.com/in/rupinder-goel-7228124/" target="_blank" rel="noopener" aria-label="linkedin">LinkedIn</a>
                     </div>
                     <div class="column">
-                        <img class="carousel--advisors-img" src="assets/team/tetsuro.jpeg" alt="advisors">
-                        <h3 class="carousel--advisors-name text-white">Tetsuro Masunaga</h3>
-                        <p class="carousel--advisors-title text-white">CEO & Co-Founder</p>
-                        <a class="btn" href="https://www.linkedin.com/in/tetsuro-masunaga-12370b62/" target="_blank" rel="noopener" aria-label="linkedin">LinkedIn</a>
+                        <img class="carousel--advisors-img" src="assets/advisors/wael.jpg" alt="advisors">
+                        <h3 class="carousel--advisors-name text-white">Wael Osman</h3>
+                        <p class="carousel--advisors-title text-white">Advisor</p>
+                        <a class="btn" href="https://www.linkedin.com/in/waelosman/" target="_blank" rel="noopener" aria-label="linkedin">LinkedIn</a>
+                    </div>
+                    <div class="column">
+                        <img class="carousel--advisors-img" src="assets/advisors/ryan.jpg" alt="advisors">
+                        <h3 class="carousel--advisors-name text-white">Ryan Monsurate</h3>
+                        <p class="carousel--advisors-title text-white">Advisor</p>
+                        <a class="btn" href="https://www.linkedin.com/in/ryanmonsurate/" target="_blank" rel="noopener" aria-label="linkedin">LinkedIn</a>
+                    </div>
+                    <div class="column">
+                        <img class="carousel--advisors-img" src="assets/advisors/arpan.jpg" alt="advisors">
+                        <h3 class="carousel--advisors-name text-white">Dr. Arpan Kar</h3>
+                        <p class="carousel--advisors-title text-white">Advisor</p>
+                        <a class="btn" href="https://www.linkedin.com/in/arpankar/" target="_blank" rel="noopener" aria-label="linkedin">LinkedIn</a>
+                    </div>
+                     <div class="column">
+                        <img class="carousel--advisors-img" src="assets/advisors/mp.jpg" alt="advisors">
+                        <h3 class="carousel--advisors-name text-white">MP Gupta</h3>
+                        <p class="carousel--advisors-title text-white">Advisor</p>
+                        <a class="btn" href="https://www.linkedin.com/in/profmpgupta/" target="_blank" rel="noopener" aria-label="linkedin">LinkedIn</a>
+                    </div>
+                    <div class="column">
+                        <img class="carousel--advisors-img" src="assets/advisors/melanion.jpg" alt="advisors">
+                        <h3 class="carousel--advisors-name text-white">Melanion Hendra</h3>
+                        <p class="carousel--advisors-title text-white">Business Analyst</p>
+                        <a class="btn" href="https://www.linkedin.com/in/melanion-hendra-338049203/" target="_blank" rel="noopener" aria-label="linkedin">LinkedIn</a>
                     </div>
                 </div>
                 <svg id="advisors-previous" class="previous carousel__arrow carousel__arrow--white"><use xlink:href="#icon-arrow-left"/></svg>
@@ -513,19 +592,34 @@
                 </div>
                 <div class="row carousel carousel--partners">
                     <div class="column">
-                        <a href="https://www.rsm.global/uae/" target="_blank" rel="noopener"><img src="assets/logo rsm.png" alt="partner"></a>
-                    </div>
-                    <div class="column">
-                        <a href="https://www.murc.jp/" target="_blank" rel="noopener"><img src="assets/logo mufg.png" alt="partner"></a>
-                    </div>
-                    <div class="column">
                         <a href="https://datagateway.co.jp/" target="_blank" rel="noopener"><img src="assets/logo dg.png" alt="partner"></a>
                     </div>
                     <div class="column">
-                        <a href="https://www.matrix.io/" target="_blank" rel="noopener"><img src="assets/logo matrix.png" alt="partner"></a>
+                        <a href="http://www.ncspl.net/" target="_blank" rel="noopener"><img src="assets/logo netsoft.png" alt="partner"></a>
                     </div>
                     <div class="column">
-                        <a href="http://www.ncspl.net/" target="_blank" rel="noopener"><img src="assets/logo netsoft.png" alt="partner"></a>
+                        <a href="https://www.murc.jp/" target="_blank" rel="noopener"><img src="assets/logo mufg.png" alt="partner"></a>
+                    </div>                    
+                    <div class="column">
+                        <a href="https://www.rsm.global/uae/" target="_blank" rel="noopener"><img src="assets/logo rsm.png" alt="partner"></a>
+                    </div>
+                    <div class="column">
+                        <a href="https://www.saturdays.ai/" target="_blank" rel="noopener"><img src="assets/logo saturdays.png" alt="partner"></a>
+                    </div>
+                    <div class="column">
+                        <a href="https://www.lewagon.com/" target="_blank" rel="noopener"><img src="assets/logo le wagon.png" alt="partner"></a>
+                    </div>
+                    <div class="column">
+                        <a href="https://aimultiple.com/" target="_blank" rel="noopener"><img src="assets/logo ai multiple.png" alt="partner"></a>
+                    </div>
+                    <div class="column">
+                        <a href="https://daia.foundation/" target="_blank" rel="noopener"><img src="assets/logo ai alliance.png" alt="partner"></a>
+                    </div>
+                    <div class="column">
+                        <a href="http://iotncr.org/" target="_blank" rel="noopener"><img src="assets/logo iotncr.png" alt="partner"></a>
+                    </div>
+                    <div class="column">
+                        <a href="https://www.facebook.com/LIF-110035220678888/" target="_blank" rel="noopener"><img src="assets/logo lif.png" alt="partner"></a>
                     </div>
                 </div>
                 <svg id="partners-previous" class="previous carousel__arrow"><use xlink:href="#icon-arrow-left"/></svg>
@@ -557,16 +651,22 @@
                 </div>
                 <div class="row carousel carousel--gallery">
                     <div class="column">
-                        <img src="assets/gallery1.png" alt="gallery">
+                        <img src="assets/gallery1.jpg" alt="gallery">
                     </div>
                     <div class="column">
-                        <img src="assets/gallery2.png" alt="gallery">
+                        <img src="assets/gallery2.jpg" alt="gallery">
                     </div>
                     <div class="column">
-                        <img src="assets/gallery3.png" alt="gallery">
+                        <img src="assets/gallery3.jpg" alt="gallery">
                     </div>
                     <div class="column">
-                        <img src="assets/gallery4.jpeg" alt="gallery">
+                        <img src="assets/gallery4.jpg" alt="gallery">
+                    </div>
+                    <div class="column">
+                        <img src="assets/gallery5.jpg" alt="gallery">
+                    </div>
+                    <div class="column">
+                        <img src="assets/gallery6.jpg" alt="gallery">
                     </div>
                 </div>
                 <svg id="gallery-previous" class="previous carousel__arrow carousel__arrow--white"><use xlink:href="#icon-arrow-left"/></svg>
