--- a/index.html
+++ b/index.html
@@ -54,19 +54,19 @@
                     <a href="#"><svg><use xlink:href="#icon-toggle"/></svg></a>
                 </li>
                 <li class="nav__item">
-                    <a href="#" class="nav__link">Project</a>
+                    <a href="#project" class="nav__link">Project</a>
                 </li>
                 <li class="nav__item">
-                    <a href="#" class="nav__link">Token</a>
+                    <a href="#token" class="nav__link">Token</a>
                 </li>
                 <li class="nav__item">
-                    <a href="#" class="nav__link">Timeline</a>
+                    <a href="#roadmap" class="nav__link">Timeline</a>
                 </li>
                 <li class="nav__item">
-                    <a href="#" class="nav__link">Community</a>
+                    <a href="#community" class="nav__link">Community</a>
                 </li>
                 <li class="nav__item">
-                    <a href="#" class="nav__link">Team</a>
+                    <a href="#team" class="nav__link">Team</a>
                 </li>
                 <li class="nav__item">
                     <a href="#whitepaper" class="nav__link">Whitepaper</a>
@@ -86,7 +86,7 @@
             </div>
         </header>
 
-        <section>
+        <section id="project">
             <div class="container text-center">
                 <div class="row">
                     <div class="column">
@@ -127,7 +127,7 @@
             </div>
         </section>
 
-        <section class="bg-purple-1">
+        <section id="token" class="bg-purple-1">
             <div class="container">
                 <h2 class="text-center text-white mb3">Token Overview</h2>
                 <div class="row mb3">
@@ -275,7 +275,7 @@
             </div>
         </section>
 
-        <section class="bg-purple-2">
+        <section id="roadmap" class="bg-purple-2">
             <div class="carousel-wrapper">
                 <div class="row">
                     <div class="column text-center">
@@ -364,7 +364,7 @@
             </div>
         </section>
 
-        <section class="bg-purple-1">
+        <section id="community" class="bg-purple-1">
             <div class="container">
                 <div class="row">
                     <div class="column text-center text-white">
@@ -397,7 +397,7 @@
             </div>
         </section>
 
-        <section class="bg-purple-2">
+        <section id="team" class="bg-purple-2">
             <div class="container carousel-wrapper">
                 <div class="row">
                     <div class="column text-center">
