Mobile table bug

--- a/index.html
+++ b/index.html
@@ -157,26 +157,28 @@
                 <h3 class="text-center">Token Metrics</h3>
                 <div class="row">
                     <div class="column">
-                        <table class="table--border text-white mb3">
-                            <tbody>
-                                <tr>
-                                    <td>Token Name</td>
-                                    <td>bitgrit Token</td>
-                                    <td>Token Protocol</td>
-                                    <td>ERC-20</td>
-                                    <td>Total Supply</td>
-                                    <td>750,000,000</td>
-                                </tr>
-                                <tr>
-                                    <td>Token Symbol</td>
-                                    <td>GR</td>
-                                    <td>Token Type</td>
-                                    <td>Utility</td>
-                                    <td>Decimals</td>
-                                    <td>18</td>
-                                </tr>
-                            </tbody>
-                        </table>
+                        <div class="table-wrapper">
+                            <table class="table--border text-white mb3">
+                                <tbody>
+                                    <tr>
+                                        <td>Token Name</td>
+                                        <td>bitgrit Token</td>
+                                        <td>Token Protocol</td>
+                                        <td>ERC-20</td>
+                                        <td>Total Supply</td>
+                                        <td>750,000,000</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Token Symbol</td>
+                                        <td>GR</td>
+                                        <td>Token Type</td>
+                                        <td>Utility</td>
+                                        <td>Decimals</td>
+                                        <td>18</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
                     </div>
                 </div>
             </div>
