--- a/index.html
+++ b/index.html
@@ -688,15 +688,15 @@
                             <div class="form__row">
                                 <div class="form__column">
                                     <div class="form__group">
-                                        <input type="text" placeholder="Full Name" id="name" name="name" required>
+                                        <input type="text" placeholder="Full Name" id="name" name="name" aria-label="name" required>
                                     </div>
                                     <div class="form__group">
-                                        <input type="email" placeholder="Email" id="email" name="email" required>
+                                        <input type="email" placeholder="Email" id="email" name="email" aria-label="email" required>
                                     </div>
                                 </div>
                                 <div class="form__column">
                                     <div class="form__group">
-                                        <textarea placeholder="Message" id="message" name="message" required></textarea>
+                                        <textarea placeholder="Message" id="message" name="message" aria-label="message" required></textarea>
                                     </div>
                                 </div>
                             </div>
