--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                     <p>This is where organizations or individuals provide prompts about data science and sponsor competitions on our platform with prizes. Data scientists in our community participate in competitions to create the best solutions to these prompts.</p>
                 </div>
                 <div class="card__footer">
-                    <a class="btn" href="https://bitgrit.net/" target="_blank">Participate Now</a>
+                    <a class="btn" href="https://bitgrit.net/" target="_blank" rel="noopener">Participate Now</a>
                 </div>
             </div>
             <div class="card bg-purple-3 text-white">
@@ -113,7 +113,7 @@
                     <p>We match data science talent with global and domestic companies in Japan, including customizable headhunting services from our own competition platform and across industries. Clients have the opportunity to hire winners in our AI competitions to deploy or refine their solution.</p>
                 </div>
                 <div class="card__footer">
-                    <a class="btn" href="https://bitgrit.net/jobs/" target="_blank">Apply Now</a>
+                    <a class="btn" href="https://bitgrit.net/jobs/" target="_blank" rel="noopener">Apply Now</a>
                 </div>
             </div>
             <div class="card bg-purple-4 text-white">
@@ -382,7 +382,7 @@
                         <h3 class="small mt0 mb0">Events</h3>
                         <p class="mt0 mb0">Want to network while learning about high-tech concepts? We organize regular events online and locally in Japan, India, Nigeria, and all around the world! Visit our Meetup page or contact us to learn more and join the discussion.</p>
                         <div class="text-right">
-                            <a class="mr1" href="https://www.meetup.com/bitgrit/" target="_blank">Global Meetup ></a><a class="mr1" href="https://www.meetup.com/Democratic-AI-by-bitgrit-Tokyo/" target="_blank">Tokyo Meetup ></a><a href="https://www.meetup.com/Democratic-AI-by-bitgrit-Dubai/" target="_blank">Dubai Meetup ></a>
+                            <a class="mr1" href="https://www.meetup.com/bitgrit/" target="_blank" rel="noopener">Global Meetup ></a><a class="mr1" href="https://www.meetup.com/Democratic-AI-by-bitgrit-Tokyo/" target="_blank" rel="noopener">Tokyo Meetup ></a><a href="https://www.meetup.com/Democratic-AI-by-bitgrit-Dubai/" target="_blank" rel="noopener">Dubai Meetup ></a>
                         </div>
                         <h3 class="small mb0">World Data Science Forum</h3>
                         <p class="mt0 mb0">Our proprietary event, the World Data Science Forum (WDSF) is a conference-style event previously held in Japan, India, the UAE, and Malaysia. At WDSF, we bring together thought leaders, academics, and professionals in the AI field to share groundbreaking ideas and connect with each other.</p>
