--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                     <p>We envision a platform where anyone can sell and purchase access to data and AI algorithms built from that data sourced from our bitgrit community. Once developed, the best solutions from competitions will be posted on the Marketplace.</p>
                 </div>
                 <div class="card__footer">
-                    <a class="btn" href="" target="_blank">Read more</a>
+                    <a class="btn" href="" target="_blank">Coming soon</a>
                 </div>
             </div>
         </section>
@@ -131,24 +131,24 @@
             <div class="container">
                 <h2 class="text-center text-white mb3">Token Overview</h2>
                 <div class="row mb3">
-                    <div class="column small">
+                    <div class="column">
                         <div class="media">
                             <div class="media__icon">
                                 <img src="assets/icon ecosystem.png" alt="icon">
                             </div>
                             <div class="media__body">
-                                <h3 class="small">Token Ecosystem</h3>
+                                <h3>Token Ecosystem</h3>
                                 <p class="text-white">GR is built on top of Ethereum’s ERC-20 protocol, the industry standard for smart contracts and issuance of original tokens. This protocol enables us to quantify the value of AI algorithms developed by data scientists on our platform.</p>
                             </div>
                         </div>
                     </div>
-                    <div class="column small">
+                    <div class="column">
                         <div class="media">
                             <div class="media__icon">
                                 <img src="assets/icon significance.png" alt="icon">
                             </div>
                             <div class="media__body">
-                                <h3 class="small">Token Significance</h3>
+                                <h3>Token Significance</h3>
                                 <p class="text-white">By using blockchain technology, bitgrit aims to democratize AI, bring together data scientists from around the world and connect them to companies in need of AI solutions. This collaboration is available to everyone, regardless of experience, resources, or location.</p>
                             </div>
                         </div>
@@ -161,19 +161,19 @@
                             <table class="table--border text-white mb3">
                                 <tbody>
                                     <tr>
-                                        <td>Token Name</td>
+                                        <th>Token Name</th>
                                         <td>bitgrit Token</td>
-                                        <td>Token Protocol</td>
+                                        <th>Token Protocol</th>
                                         <td>ERC-20</td>
-                                        <td>Total Supply</td>
+                                        <th>Total Supply</th>
                                         <td>750,000,000</td>
                                     </tr>
                                     <tr>
-                                        <td>Token Symbol</td>
+                                        <th>Token Symbol</th>
                                         <td>GR</td>
-                                        <td>Token Type</td>
+                                        <th>Token Type</th>
                                         <td>Utility</td>
-                                        <td>Decimals</td>
+                                        <th>Decimals</th>
                                         <td>18</td>
                                     </tr>
                                 </tbody>
@@ -191,7 +191,7 @@
                         <table>
                             <thead class="text-left">
                                 <tr>
-                                    <th colspan="2"><strong>Token Distribution Chart</th>
+                                    <th colspan="2"><strong class="large">Token Distribution Chart</th>
                                 </tr>
                                 <tr>
                                     <th>Stakeholder</th>
@@ -378,21 +378,21 @@
                     <div class="column">
                         <img class="center" src="assets/map.png" alt="image">
                     </div>
-                    <div class="column text-white small">
-                        <h3 class="small mt0 mb0">Events</h3>
+                    <div class="column text-white">
+                        <h3 class="mt0 mb0">Events</h3>
                         <p class="mt0 mb0">Want to network while learning about high-tech concepts? We organize regular events online and locally in Japan, India, Nigeria, and all around the world! Visit our Meetup page or contact us to learn more and join the discussion.</p>
                         <div class="text-right">
                             <a class="mr1" href="https://www.meetup.com/bitgrit/" target="_blank" rel="noopener">Global Meetup ></a><a class="mr1" href="https://www.meetup.com/Democratic-AI-by-bitgrit-Tokyo/" target="_blank" rel="noopener">Tokyo Meetup ></a><a href="https://www.meetup.com/Democratic-AI-by-bitgrit-Dubai/" target="_blank" rel="noopener">Dubai Meetup ></a>
                         </div>
-                        <h3 class="small mb0">World Data Science Forum</h3>
+                        <h3 class="mb0">World Data Science Forum</h3>
                         <p class="mt0 mb0">Our proprietary event, the World Data Science Forum (WDSF) is a conference-style event previously held in Japan, India, the UAE, and Malaysia. At WDSF, we bring together thought leaders, academics, and professionals in the AI field to share groundbreaking ideas and connect with each other.</p>
                         <div class="text-right">
-                            <a href="" target="_blank">Learn more ></a>
+                            <a href="https://worlddsf.org/" target="_blank" rel="noopener">Learn more ></a>
                         </div>
-                        <h3 class="small mb0">Campus Ambassador Program</h3>
+                        <h3 class="mb0">Campus Ambassador Program</h3>
                         <p class="mt0 mb0">Students at top universities around the globe represent the bitgrit community – in India, Malaysia, Nigeria and beyond. With fresh perspectives and invaluable support for events and promotions, Campus Ambassadors form a cornerstone of our community. Join the program!</p>
                         <div class="text-right">
-                            <a href="" target="_blank">Learn more ></a>
+                            <a href="https://bitgrit.net/cap/" target="_blank" rel="noopener">Learn more ></a>
                         </div>
                     </div>
                 </div>
@@ -715,24 +715,24 @@
                         <img src="assets/logo.png" alt="logo">
                         <p>bitgrit is an Asia-based networking platform for data scientists that develops mechanisms to optimize AI and better integrate it in today’s society.</p>
                         <div class="footer__social">
-                            <a href="https://www.facebook.com/bitgrit/" title="Facebook" target="_blank" rel="noopener noreferrer"><img src="assets/icon facebook.svg" alt="icon"></a>
-                            <a href="https://twitter.com/bitgrit_global" title="Twitter" target="_blank" rel="noopener noreferrer"><img src="assets/icon twitter.svg" alt="icon"></a>
-                            <a href="http://t.me/bitgrit" title="Telegram" target="_blank" rel="noopener noreferrer"><img src="assets/icon telegram.svg" alt="icon"></a>
-                            <a href="https://www.linkedin.com/company/bitgrit" title="Linkedin" target="_blank" rel="noopener noreferrer"><img src="assets/icon linkedin.svg" alt="icon"></a>
+                            <a href="https://www.facebook.com/bitgrit/" title="Facebook" target="_blank" rel="noopener"><img src="assets/icon facebook.svg" alt="icon"></a>
+                            <a href="https://twitter.com/bitgrit_global" title="Twitter" target="_blank" rel="noopener"><img src="assets/icon twitter.svg" alt="icon"></a>
+                            <a href="http://t.me/bitgrit" title="Telegram" target="_blank" rel="noopener"><img src="assets/icon telegram.svg" alt="icon"></a>
+                            <a href="https://www.linkedin.com/company/bitgrit" title="Linkedin" target="_blank" rel="noopener"><img src="assets/icon linkedin.svg" alt="icon"></a>
                         </div>
                     </div>
                     <div class="column">
                         <h3>Features</h3>
-                        <p><a href="https://bitgrit.net/competition/">Competitions</a></p>
-                        <p><a href="https://bitgrit.net/jobs/">Job Board</a></p>
-                        <p><a href="https://bitgrit.net/dataset/">Datasets</a></p>
+                        <p><a href="https://bitgrit.net/competition/" target="_blank" rel="noopener">Competitions</a></p>
+                        <p><a href="https://bitgrit.net/jobs/" target="_blank" rel="noopener">Job Board</a></p>
+                        <p><a href="https://bitgrit.net/dataset/" target="_blank" rel="noopener">Datasets</a></p>
                     </div>
                     <div class="column">
                         <h3>Company</h3>
-                        <p><a href="https://bitgrit.net/info#about">About Us</a>
-                        <p><a href="https://t.me/bitgrit">Community</a></p>
-                        <p><a href="https://medium.com/@bitgrit">Blog</a></p>
-                        <p><a href="https://www.meetup.com/bitgrit/">Events</a></p>
+                        <p><a href="https://bitgrit.net/about/" target="_blank" rel="noopener">About Us</a>
+                        <p><a href="https://t.me/bitgrit" target="_blank" rel="noopener">Community</a></p>
+                        <p><a href="https://medium.com/@bitgrit" target="_blank" rel="noopener">Blog</a></p>
+                        <p><a href="https://www.meetup.com/bitgrit/" target="_blank" rel="noopener">Events</a></p>
                     </div>
                     <div class="column">
                         <h3>Contact</h3>
@@ -746,7 +746,7 @@
                         <p>Copyright © bitgrit 2021</p>
                     </div>
                     <div class="column">
-                        <a href="https://bitgrit.net/info#terms">Terms & Conditions</a> / <a href="https://bitgrit.net/info#privacy">Privacy Policy</a>
+                        <a href="https://bitgrit.net/info#terms" target="_blank" rel="noopener">Terms & Conditions</a> / <a href="https://bitgrit.net/info#privacy" target="_blank" rel="noopener">Privacy Policy</a>
                     </div>
                 </div>
             </div>
