--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
                         <h3 class="mt0 mb0">Events</h3>
                         <p class="mt0 mb0">Want to network while learning about high-tech concepts? We organize regular events online and locally in Japan, India, Nigeria, and all around the world! Visit our Meetup page or contact us to learn more and join the discussion.</p>
                         <div class="text-right">
-                            <a class="mr1" href="https://www.meetup.com/bitgrit/" target="_blank" rel="noopener">Global Meetup&nbsp;></a><a class="mr1" href="https://www.meetup.com/Democratic-AI-by-bitgrit-Tokyo/" target="_blank" rel="noopener">Tokyo Meetup&nbsp;></a><a href="https://www.meetup.com/Democratic-AI-by-bitgrit-Dubai/" target="_blank" rel="noopener">Dubai Meetup&nbsp;></a>
+                            <a class="mr1" href="https://www.meetup.com/bitgrit/" target="_blank" rel="noopener">Global&nbsp;></a><a class="mr1" href="https://www.meetup.com/Democratic-AI-by-bitgrit-Tokyo/" target="_blank" rel="noopener">Tokyo&nbsp;></a><a href="https://www.meetup.com/Democratic-AI-by-bitgrit-Dubai/" target="_blank" rel="noopener">Dubai&nbsp;></a>
                         </div>
                         <h3 class="mb0">World Data Science Forum</h3>
                         <p class="mt0 mb0">Our proprietary event, the World Data Science Forum (WDSF) is a conference-style event previously held in Japan, India, the UAE, and Malaysia. At WDSF, we bring together thought leaders, academics, and professionals in the AI field to share groundbreaking ideas and connect with each other.</p>
@@ -630,7 +630,7 @@
         </section>
 
         <section class="bg-purple-1">
-            <div class="carousel-wrapper">
+            <div class="carousel-wrapper text-left">
                 <div class="row">
                     <div class="column text-center">
                         <h2 class="text-white">Blog</h2>
